--- a/package.json
+++ b/package.json
@@ -39,16 +39,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@prisma/client": "^6.17.1",
+    "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
-    "postcss": "^8.4.49",
     "prisma": "^6.17.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
