--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "exa-js": "^1.10.2",
-    "https-proxy-agent": "^7.0.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
@@ -34,24 +33,21 @@
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
     "technicalindicators": "^3.1.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "@prisma/client": "^6.17.1",
+    "eslint-config-next": "15.5.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@prisma/client": "^6.17.1",
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.6",
     "prisma": "^6.17.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
-  },
-  "engines": {
-    "node": ">=18"
   }
 }
