--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "exa-js": "^1.10.2",
+    "https-proxy-agent": "^7.0.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
@@ -33,21 +34,24 @@
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
     "technicalindicators": "^3.1.0",
-    "zod": "^4.1.12",
-    "@prisma/client": "^6.17.1",
-    "eslint-config-next": "15.5.6"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@prisma/client": "^6.17.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
+    "eslint-config-next": "15.5.6",
+    "postcss": "^8.4.49",
     "prisma": "^6.17.1",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
