--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@prisma/client": "^6.17.1",
+    "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -46,7 +47,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
     "prisma": "^6.17.1",
-    "tailwindcss": "^4.0.0-beta.7",
+    "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
